java11 fixes